--- a/escrow/Cargo.toml
+++ b/escrow/Cargo.toml
@@ -6,6 +6,9 @@ publish = false
 
 [dependencies]
 solana-program = "=1.8.1"
+thiserror = "1.0.24"
+spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
+arrayref = "0.3.6"
 
 [features]
 test-bpf = []
